fix: fix IntelliJ problems